--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -160,7 +160,7 @@
       <li><a href="https://www.zhihu.com/people/{{ author.zhihu }}"><i class="fab fa-fw fa-zhihu icon-pad-right" aria-hidden="true"></i>Zhihu</a></li>
       {% endif %}      
       {% if author.note %}
-      <li><a href="https://note.com/{{ author.note }}"><i class="fab fa-fw fa-note icon-pad-right" aria-hidden="true"></i>note</a></li>
+      <li><a href="https://note.com/{{ author.note }}"><i class="fab fa-fw fa-sticky-note icon-pad-right" aria-hidden="true"></i>note</a></li>
       {% endif %}      
     </ul>
   </div>
